--- a/labo3/pro-gramme-base-lab3/client/index.html
+++ b/labo3/pro-gramme-base-lab3/client/index.html
@@ -20,11 +20,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
             crossorigin="anonymous"></script>
+    <script src="scripts/produit.js"></script>
     <script src="scripts/main.js"></script>
     <script src="scripts/inscription.js"></script>
     <script src="scripts/points_de_vente.js"></script>
     <script src="scripts/navigation.js"></script>
-    <script src="scripts/produit.js"></script>
+    <script src="https://kit.fontawesome.com/b80816fcb3.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
@@ -35,7 +36,7 @@
             <div class="barre-menu">
                 <a href="#/" >Accueil</a>
                 <a href="#/inscription">Inscription</a>
-                <a href="produits.html">Produits</a>
+                <a href="#/produit">Produits</a>
                 <div class="deroulant"><button class="btn-deroulant">À propos</button>
                     <div class="sous-menu">
                         <a href="#/points_de_vente">Points de ventes</a>
@@ -46,7 +47,7 @@
         </div>
     </nav>
 </header>
-<div id="corps-principal">
+<div id="corps-principal" class="centrer">
     <h1 id="para-1">Bienvenu chez Pro-Gramme</h1>
     <section id="menu-gauche">
         <a href="#para-1" onclick="clicMenuGauche(this)">Premier paragraphe</a>
