--- a/labo3/pro-gramme-base-lab3/client/inscription.html
+++ b/labo3/pro-gramme-base-lab3/client/inscription.html
@@ -1,50 +1,61 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="author" content="Félix Dion">
-    <meta name="description" content="Pro-gramme, ajoute d'un point sur la toile">
-    <meta name="keywords" content="Suppléments aliments, protéines">
-    <title>Inscription à Pro-Gramme</title>
-    <link rel="stylesheet" href="style/main.css">
-    <script src="scripts/inscription.js"></script>
-</head>
-<body>
-<div id="corps-principal">
-    <h1 id="para-1">Inscription à Pro-Gramme</h1>
-    <section id="menu-gauche">
-        <a href="#para-1">Premier paragraphe</a>
-        <a href="#para-2">Second paragraphe</a>
-        <a href="#para-3">Troisième paragraphe</a>
-    </section>
-    <section id="section-inscription">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi
-            aperiam at consectetur consequuntur doloremque eligendi et illum iusto maxime
-            necessitatibus odit perspiciatis porro, temporibus tenetur voluptas
-            voluptatem voluptatum. Libero, officia!</p>
-    </section>
-    <form method="post" action="confirmation.html" id="formulaire-auth">
+<h1 id="para-1" class="centrer">Inscription au Pro-Gramme</h1>
+<section id="menu-gauche">
+    <a href="#para-1">Premier paragraphe</a>
+    <a href="#para-2">Second paragraphe</a>
+    <a href="#para-3">Troisième paragraphe</a>
+</section>
+<section id="section-inscription">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi aperiam at consectetur consequuntur doloremque eligendi et illum iusto maxime necessitatibus odit perspiciatis porro, temporibus tenetur voluptas voluptatem voluptatum. Libero, officia!</p>
+    <table id="table-inscription">
+        <caption>Types d'abonnement</caption>
+        <tr>
+            <th>Type</th>
+            <th>Prix</th>
+            <th>Description</th>
+        </tr>
+        <tr>
+            <td>Basique</td>
+            <td>15$</td>
+            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aut beatae consequatur corporis distinctio doloremque dolorum excepturi!</td>
+        </tr>
+        <tr>
+            <td>Premium</td>
+            <td>50$</td>
+            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aut beatae consequatur corporis distinctio doloremque dolorum excepturi!</td>
+        </tr>
+        <tr>
+            <td>Entraîneur</td>
+            <td rowspan="2">75$</td>
+            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aut beatae consequatur corporis distinctio doloremque dolorum excepturi!</td>
+        </tr>
+        <tr>
+            <td>Athlète</td>
+            <!--<td>75$</td>-->
+            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aut beatae consequatur corporis distinctio doloremque dolorum excepturi!</td>
+        </tr>
+    </table>
+    <form method="post" action="confirmation.html">
         <fieldset id="#renseignement-auth">
-            <legend>Renseignement d'authentification</legend>
+            <legend>Renseignements d'authentification</legend>
             <div class="group">
                 <label for="prenom">Prénom</label>
-                <input type="text" name="prenom" id="prenom" />
+                <input type="text" name="prenom" id="prenom" required/>
             </div>
             <div class="group">
                 <label for="nom">Nom</label>
-                <input type="text" name="nom" id="nom" />
+                <input type="text" name="nom" id="nom" required/>
             </div>
             <div class="group">
                 <label for="courriel">Adresse courriel</label>
-                <input type="email" name="courriel" id="courriel" />
+                <input type="email" name="courriel" id="courriel" required/>
             </div>
             <div class="group">
                 <label for="mot-de-passe">Mot de passe</label>
-                <input type="password" name="mot-de-passe" id="mot-de-passe" />
+                <input type="password" name="mot-de-passe" id="mot-de-passe" required/>
             </div>
         </fieldset>
         <fieldset>
-            <legend>Renseignement d'inscription</legend>
+            <legend>Renseignements d'inscription</legend>
             <div class="group">
                 <label for="type-abonnement">Type d'abonnement</label>
                 <select name="type-abonnement" id="type-abonnement">
@@ -58,6 +69,5 @@
             <input type="submit" value="Soumettre">
         </div>
     </form>
-</div>
-</body>
-</html>
+</section>
+
