--- a/labo3/pro-gramme-base-lab3/client/points_de_vente.html
+++ b/labo3/pro-gramme-base-lab3/client/points_de_vente.html
@@ -1,33 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="author" content="Instructor IFT 215">
-    <meta name="description" content="Pro-gramme, saucez dans la vie">
-    <meta name="keywords" content="Suppléments alimentaires, protéines">
-
-    <title>Pro-Gramme</title>
-
-    <link rel="stylesheet" href="style/main.css">
-    <script src="scripts/points_de_vente.js"></script>
-
-</head>
-<body>
-<div id="corps-principal">
-    <h1 id="para-1" class="centrer">Nos points de vente</h1>
-    <section id="menu-gauche">
-        <a href="#para-1">Haut de page</a>
-        <a href="#para-2">Points de ventes au Canada</a>
-        <a href="#para-3">Points de ventes à l'international</a>
+<h1 id="para-1">Nos points de vente</h1>
+<section id="menu-gauche">
+    <a href="#para-1">Haut de page</a>
+    <a href="#para-2">Points de ventes au Canada</a>
+    <a href="#para-3">Points de ventes à l'international</a>
+</section>
+<section id="section-pdv">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid animi eligendi iure, molestias,
+        necessitatibus nostrum numquam placeat sapiente sit tempore totam vel voluptatem? Dicta explicabo libero
+        officiis quisquam repellat.</p>
+    <h2 id="para-2">Points de ventes au Canada</h2>
+    <section id="pdv-grille">
     </section>
-    <section id="section-pdv">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid animi eligendi iure, molestias, necessitatibus nostrum numquam placeat sapiente sit tempore totam vel voluptatem? Dicta explicabo libero officiis quisquam repellat.</p>
-        <h2 id="para-2">Points de ventes au Canada</h2>
-        <section id="pdv-grille">
-        </section>
-        <h2 id="para-3">Points de ventes à l'international</h2>
-        <section id="pdv-flex">
-        </section>
+    <h2 id="para-3">Points de ventes à l'international</h2>
+    <section id="pdv-flex">
     </section>
-</div>
-</body>
+</section>
