Uniformisé le fonctionnement du menu de gauche
+ fait fonctionner la page des produits

--- a/labo3/pro-gramme-base-lab3/client/points_de_vente.html
+++ b/labo3/pro-gramme-base-lab3/client/points_de_vente.html
@@ -1,8 +1,8 @@
 <h1 id="para-1">Nos points de vente</h1>
 <section id="menu-gauche">
-    <a href="#para-1">Haut de page</a>
-    <a href="#para-2">Points de ventes au Canada</a>
-    <a href="#para-3">Points de ventes à l'international</a>
+    <a href="#para-1" onclick="clicMenuGauche(this)">Haut de page</a>
+    <a href="#para-2" onclick="clicMenuGauche(this)">Points de ventes au Canada</a>
+    <a href="#para-3" onclick="clicMenuGauche(this)">Points de ventes à l'international</a>
 </section>
 <section id="section-pdv">
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid animi eligendi iure, molestias,
