--- a/labo3/pro-gramme-base-lab3/client/inscription.html
+++ b/labo3/pro-gramme-base-lab3/client/inscription.html
@@ -1,11 +1,14 @@
-<h1 id="para-1" class="centrer">Inscription au Pro-Gramme</h1>
+<h1 id="para-1">Inscription au Pro-Gramme</h1>
 <section id="menu-gauche">
-    <a href="#para-1">Premier paragraphe</a>
-    <a href="#para-2">Second paragraphe</a>
-    <a href="#para-3">Troisième paragraphe</a>
+    <a href="#para-1" onclick="clicMenuGauche(this)">Premier paragraphe</a>
+    <a href="#para-2" onclick="clicMenuGauche(this)">Second paragraphe</a>
+    <a href="#para-3" onclick="clicMenuGauche(this)">Troisième paragraphe</a>
 </section>
 <section id="section-inscription">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi aperiam at consectetur consequuntur doloremque eligendi et illum iusto maxime necessitatibus odit perspiciatis porro, temporibus tenetur voluptas voluptatem voluptatum. Libero, officia!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi
+        aperiam at consectetur consequuntur doloremque eligendi et illum iusto maxime
+        necessitatibus odit perspiciatis porro, temporibus tenetur voluptas
+        voluptatem voluptatum. Libero, officia!</p>
     <table id="table-inscription">
         <caption>Types d'abonnement</caption>
         <tr>
@@ -16,27 +19,35 @@
         <tr>
             <td>Basique</td>
             <td>15$</td>
-            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aut beatae consequatur corporis distinctio doloremque dolorum excepturi!</td>
+            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aut beatae consequatur corporis
+                distinctio doloremque dolorum excepturi!
+            </td>
         </tr>
         <tr>
             <td>Premium</td>
             <td>50$</td>
-            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aut beatae consequatur corporis distinctio doloremque dolorum excepturi!</td>
+            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aut beatae consequatur corporis
+                distinctio doloremque dolorum excepturi!
+            </td>
         </tr>
         <tr>
             <td>Entraîneur</td>
             <td rowspan="2">75$</td>
-            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aut beatae consequatur corporis distinctio doloremque dolorum excepturi!</td>
+            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aut beatae consequatur corporis
+                distinctio doloremque dolorum excepturi!
+            </td>
         </tr>
         <tr>
             <td>Athlète</td>
             <!--<td>75$</td>-->
-            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aut beatae consequatur corporis distinctio doloremque dolorum excepturi!</td>
+            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aut beatae consequatur corporis
+                distinctio doloremque dolorum excepturi!
+            </td>
         </tr>
     </table>
     <form method="post" action="confirmation.html">
         <fieldset id="#renseignement-auth">
-            <legend>Renseignements d'authentification</legend>
+            <legend>Renseignement d'authentification</legend>
             <div class="group">
                 <label for="prenom">Prénom</label>
                 <input type="text" name="prenom" id="prenom" required/>
@@ -55,7 +66,7 @@
             </div>
         </fieldset>
         <fieldset>
-            <legend>Renseignements d'inscription</legend>
+            <legend>Renseignement d'inscription</legend>
             <div class="group">
                 <label for="type-abonnement">Type d'abonnement</label>
                 <select name="type-abonnement" id="type-abonnement">
@@ -70,4 +81,3 @@
         </div>
     </form>
 </section>
-
