--- a/labo3/pro-gramme-base-lab3/client/produit.html
+++ b/labo3/pro-gramme-base-lab3/client/produit.html
@@ -1,15 +1,21 @@
-<div id="corps-principal">
-  <section class="mt-2 container">
+<section class="mt-2 container">
     <div class="row">
-      <div class="offset-md-10 col-md-2">
-        <div class="input-group mb-3">
-          <input type="search" class="form-control" placeholder="search">
-          <span class="input-group-text"><i class="bi-search"></i></span>
+        <div class="offset-md-10 col-md-2">
+            <div class="input-group mb-3">
+                <input type="search" class="form-control" placeholder="search">
+                <span class="input-group-text"><i class="bi-search"></i></span>
+                <a href="#/panier" class="">
+                    <button type="button" class="btn btn-primary position-relative">
+                        <i class="bi bi-cart-plus"></i>
+                        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" id="item_counter">
+                            0
+                        </span>
+                    </button>
+                </a>
+            </div>
         </div>
-      </div>
     </div>
     <!-- Affichage de la liste de produits-->
     <div class="row" id="list_items">
     </div>
-  </section>
-</div>
+</section>
