--- a/labo3/pro-gramme-base-lab3/client/panier.html
+++ b/labo3/pro-gramme-base-lab3/client/panier.html
@@ -8,7 +8,7 @@
             <th>Qte</th>
             <th>Total</th>
         </tr>
-        <div class="row" id="list_panier">
+        <div class="row" id="list_items">
         </div>
     </table>
 </section>
